[gd_scene load_steps=4 format=3 uid="uid://ba1e2q3t5cyfk"]

[ext_resource type="Script" path="res://scripts/player/player.gd" id="1_wmnds"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_6pobs"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ep87d"]
height = 1.2

[node name="player" type="CharacterBody3D"]
script = ExtResource("1_wmnds")

[node name="standing_collision_shape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_6pobs")

[node name="crouching_collision_shape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.601603, 0)
shape = SubResource("CapsuleShape3D_ep87d")
disabled = true

[node name="raycasts" type="Node3D" parent="."]

[node name="top_of_head" type="RayCast3D" parent="raycasts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
exclude_parent = false
target_position = Vector3(0, 2, 0)

[node name="neck" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)

[node name="head" type="Node3D" parent="neck"]

[node name="Camera3D" type="Camera3D" parent="neck/head"]
