[gd_scene load_steps=31 format=3 uid="uid://ba1e2q3t5cyfk"]

[ext_resource type="Script" path="res://scripts/player/player.gd" id="1_nfg6f"]
[ext_resource type="Script" path="res://scripts/player/player_state_manager.gd" id="2_d3hr8"]
[ext_resource type="Script" path="res://scripts/player/debug/debug_velocity.gd" id="2_en4pu"]
[ext_resource type="Script" path="res://scripts/player/states/airtime.gd" id="3_r7v1a"]
[ext_resource type="Script" path="res://scripts/player/states/climb.gd" id="4_1tp42"]
[ext_resource type="Script" path="res://scripts/player/states/coiling.gd" id="5_vuc5w"]
[ext_resource type="Script" path="res://scripts/player/states/crouching.gd" id="6_3cv17"]
[ext_resource type="Script" path="res://scripts/player/states/idle.gd" id="7_nce4d"]
[ext_resource type="AnimationLibrary" uid="uid://dgdj86by110l3" path="res://assets/player/animations/basic.res" id="7_sqnnv"]
[ext_resource type="Script" path="res://scripts/player/states/jumping.gd" id="8_ybgct"]
[ext_resource type="Script" path="res://scripts/player/states/ledgegrab.gd" id="10_wf2wt"]
[ext_resource type="Script" path="res://scripts/player/states/landing.gd" id="11_c1ooh"]
[ext_resource type="Script" path="res://scripts/player/states/sliding.gd" id="12_jxsoo"]
[ext_resource type="Script" path="res://scripts/player/states/sprinting.gd" id="13_h6bkt"]
[ext_resource type="Script" path="res://scripts/player/states/vault.gd" id="14_lceho"]
[ext_resource type="Script" path="res://scripts/player/states/wallclimb.gd" id="15_adxn5"]
[ext_resource type="Script" path="res://scripts/player/states/wallrun.gd" id="16_lg3wk"]
[ext_resource type="PackedScene" uid="uid://daynbbvgk2qj6" path="res://scenes/components/ModelComponent.tscn" id="16_qj1ii"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_c8erx"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("neck/head/eyes/Camera3D:rotation")
properties/2/spawn = true
properties/2/replication_mode = 1

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_6pobs"]
height = 1.8

[sub_resource type="Animation" id="Animation_rcd5g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("neck/head/eyes/Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("neck/head/eyes/Camera3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_j3hl0"]
resource_name = "jump"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("neck/head/eyes/Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.0523599, 0, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("neck/head/eyes/Camera3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_j5eol"]
resource_name = "land"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("neck/head/eyes/Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.0523599, 0, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("neck/head/eyes/Camera3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_w37d6"]
resource_name = "roll"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("neck/head/eyes/Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(6.28319, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_yssaa"]
resource_name = "wallclimb"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("neck/head/eyes/Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.349066, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_lhig4"]
resource_name = "wallrun_left"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("neck/head/eyes/Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0.349066), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_jsp3p"]
resource_name = "wallrun_right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("neck/head/eyes/Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -0.349066), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y1atu"]
_data = {
"RESET": SubResource("Animation_rcd5g"),
"jump": SubResource("Animation_j3hl0"),
"land": SubResource("Animation_j5eol"),
"roll": SubResource("Animation_w37d6"),
"wallclimb": SubResource("Animation_yssaa"),
"wallrun_left": SubResource("Animation_lhig4"),
"wallrun_right": SubResource("Animation_jsp3p")
}

[sub_resource type="CapsuleMesh" id="CapsuleMesh_wqrwg"]

[sub_resource type="BoxShape3D" id="BoxShape3D_1uddt"]
size = Vector3(1.5, 1, 0.5)

[node name="player" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_nfg6f")
feet_height = 0.3
knees_height = 0.5
waist_height = 0.6
shoulder_height = 1.1

[node name="StateManager" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_d3hr8")
initial_state = NodePath("Idle")

[node name="AirTime" type="Node" parent="StateManager" node_paths=PackedStringArray("next_states_input", "next_states_physics")]
script = ExtResource("3_r7v1a")
next_states_input = [NodePath("../Landing"), NodePath("../Coiling"), NodePath("../Sprinting")]
next_states_physics = [NodePath("../Landing"), NodePath("../LedgeGrab"), NodePath("../Vault"), NodePath("../WallRun"), NodePath("../Climb"), NodePath("../WallClimb")]

[node name="Climb" type="Node" parent="StateManager" node_paths=PackedStringArray("next_states_physics")]
script = ExtResource("4_1tp42")
next_states_physics = [NodePath("../Idle"), NodePath("../Sprinting")]

[node name="Coiling" type="Node" parent="StateManager" node_paths=PackedStringArray("next_states_input", "next_states_physics")]
script = ExtResource("5_vuc5w")
next_states_input = [NodePath("../Sliding"), NodePath("../Sprinting")]
next_states_physics = [NodePath("../Idle"), NodePath("../Sprinting")]

[node name="Crouching" type="Node" parent="StateManager"]
script = ExtResource("6_3cv17")

[node name="Idle" type="Node" parent="StateManager" node_paths=PackedStringArray("next_states_input", "next_states_physics")]
script = ExtResource("7_nce4d")
next_states_input = [NodePath("../Crouching"), NodePath("../Jumping")]
next_states_physics = [NodePath("../Sprinting")]

[node name="Jumping" type="Node" parent="StateManager" node_paths=PackedStringArray("next_states_physics")]
script = ExtResource("8_ybgct")
next_states_physics = [NodePath("../AirTime")]

[node name="LedgeGrab" type="Node" parent="StateManager" node_paths=PackedStringArray("next_states_input")]
script = ExtResource("10_wf2wt")
next_states_input = [NodePath("../Climb")]

[node name="Landing" type="Node" parent="StateManager" node_paths=PackedStringArray("next_states_physics")]
script = ExtResource("11_c1ooh")
next_states_physics = [NodePath("../Idle"), NodePath("../Sprinting")]

[node name="Sliding" type="Node" parent="StateManager" node_paths=PackedStringArray("next_states_physics")]
script = ExtResource("12_jxsoo")
next_states_physics = [NodePath("../AirTime"), NodePath("../Crouching")]

[node name="Sprinting" type="Node" parent="StateManager" node_paths=PackedStringArray("next_states_input", "next_states_physics")]
script = ExtResource("13_h6bkt")
next_states_input = [NodePath("../Sliding"), NodePath("../Crouching"), NodePath("../Jumping")]
next_states_physics = [NodePath("../Idle"), NodePath("../AirTime")]

[node name="Vault" type="Node" parent="StateManager" node_paths=PackedStringArray("next_states_physics")]
script = ExtResource("14_lceho")
next_states_physics = [NodePath("../Sprinting"), NodePath("../Idle"), NodePath("../AirTime")]

[node name="WallClimb" type="Node" parent="StateManager" node_paths=PackedStringArray("next_states_physics")]
script = ExtResource("15_adxn5")
next_states_physics = [NodePath("../Sprinting"), NodePath("../Idle"), NodePath("../LedgeGrab"), NodePath("../Climb"), NodePath("../AirTime")]

[node name="WallRun" type="Node" parent="StateManager" node_paths=PackedStringArray("next_states_input", "next_states_physics")]
script = ExtResource("16_lg3wk")
next_states_input = [NodePath("../Jumping")]
next_states_physics = [NodePath("../Sprinting"), NodePath("../Idle"), NodePath("../AirTime")]

[node name="ModelComponent" parent="." instance=ExtResource("16_qj1ii")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.296973)

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_c8erx")

[node name="collision_shape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_6pobs")

[node name="raycasts" type="Node3D" parent="."]

[node name="top_of_head" type="RayCast3D" parent="raycasts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.88506, 0)
exclude_parent = false
target_position = Vector3(0, 2, 0)

[node name="feets" type="Node3D" parent="raycasts"]

[node name="front" type="RayCast3D" parent="raycasts/feets"]
target_position = Vector3(0, 0, -1.5)

[node name="down" type="RayCast3D" parent="raycasts/feets"]
target_position = Vector3(0, -0.5, 0)

[node name="downfront" type="RayCast3D" parent="raycasts/feets"]
target_position = Vector3(0, -0.5, -0.5)

[node name="downback" type="RayCast3D" parent="raycasts/feets"]
target_position = Vector3(0, -0.5, 0.5)

[node name="head" type="Node3D" parent="raycasts"]

[node name="front" type="RayCast3D" parent="raycasts/head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
target_position = Vector3(0, 0, -1.5)

[node name="front_obstacle" type="RayCast3D" parent="raycasts/head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, -2)
target_position = Vector3(0, -1.5, 0)

[node name="torso" type="Node3D" parent="raycasts"]

[node name="front" type="RayCast3D" parent="raycasts/torso"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
target_position = Vector3(0, 0, -1.5)

[node name="debug_velocity" type="RayCast3D" parent="raycasts/torso"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, 0)
target_position = Vector3(0, 0, -1.5)
collide_with_bodies = false
debug_shape_custom_color = Color(0.756863, 0.564706, 0, 1)
script = ExtResource("2_en4pu")

[node name="neck" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)

[node name="head" type="Node3D" parent="neck"]

[node name="eyes" type="Node3D" parent="neck/head"]

[node name="Camera3D" type="Camera3D" parent="neck/head/eyes"]
current = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="neck/head/eyes"]
root_node = NodePath("../../../..")
libraries = {
"": SubResource("AnimationLibrary_y1atu")
}

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
mesh = SubResource("CapsuleMesh_wqrwg")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"basic": ExtResource("7_sqnnv")
}

[node name="vault_shapecasts" type="Node3D" parent="."]

[node name="first" type="ShapeCast3D" parent="vault_shapecasts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -1)
shape = SubResource("BoxShape3D_1uddt")
debug_shape_custom_color = Color(0.00392157, 0.00392157, 0.00392157, 1)

[node name="second" type="ShapeCast3D" parent="vault_shapecasts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -2)
shape = SubResource("BoxShape3D_1uddt")
debug_shape_custom_color = Color(0.0156863, 0.0156863, 0.0156863, 1)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 3, 1.35896, 0)

[connection signal="line_update" from="." to="raycasts/torso/debug_velocity" method="_on_player_line_update"]
